# examen-parcial3-esteban-arosemena-alejandro-hernandez

./: CMakeLists.txt  README.md  main.cpp
c/: asistencia.c  asistencia.h  estudiante.c  estudiante.h  main.c  materias.c  materias.h
c++/: asistencia.cpp  asistencia.h  estudiante.cpp  estudiante.h  main.cpp  materias.cpp  materias.h
